public/stylesheets/app.css
/* ... */
#browser_menu .document-type-selection {
  display: none;
  position: absolute;
  top: 30px;
  background: #F0F1EB;
  width: 150px;
}

.document-type-selection a {
  color: #929292;
  padding: 3px;
  text-decoration: none;
}

.document-type-selection a:hover {
  background: black;
  color: white;
}

#browser_menu #title {
  position: absolute;
  left: 20px;
  z-index: 5000;
}


/* body > #container > #browser_wrapper > #browser > #login_action
-------------------------------------------------------------------------------*/

#login_state {
  float: right;
  width: 400px;
}

#login_action label {
  margin: 10px 0;
  color: #bbb;
}

#login {
  padding-top: 10px;
  position: absolute;
  line-height: 50px;
  right: 0px;
  z-index: 5000;
  height: 60px;
  overflow: auto;
}

#login .signup {
  position: absolute;
  top: 34px;
  color: #888;
  right: 0px;
  height: 5px;
  font-size: 14px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
}

#login a {
  font-style: normal;
}

#login div {float: left; line-height: 32px; padding-right: 1px; font-style: normal; color: #ccc;}
#login div a {
  margin-left: 10px;
}

#login input {
  float: left;
  width: 100px;
  background: white;
  border: none;
  margin-left: 4px;
}

#login input.hint { color: #ccc; }


#login input[type=submit] {
  width: 70px;
  background: #444;
  color: #eee;
}

#login input[type=submit]:hover { border: 0px solid green; opacity: 1.0; }

form.auth-form label {
  display: block;
}


/* body > #container > #browser_wrapper > #documents
-------------------------------------------------------------------------------*/


#documents {
  overflow: auto;
}
#documents table {
  padding: 0px;
  width: 100%;
}

#documents table tr:nth-child(even) {
  background: #E4E5E1;
}

#documents a {
  border: none;
}

#documents th {
  white-space: nowrap;
  padding: 15px 5px 15px 5px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
}

#documents thead th {
  font-style: italic;
  font-size: 16px;
}

#documents tbody th {
  font-size: 20px;
}

#documents tbody a {
  position: relative;
}

#documents td {
  padding: 15px 5px 15px 5px;
}

#documents .document-type { font-family: Helvetica; font-size: 10px; color: #aaa; position: absolute; left: 0px; top: -15px; }

table tr.draft, table tr.draft a {
  color: #aaa;
}

/* body > #container > #browser_wrapper > #facets
-------------------------------------------------------------------------------*/

#facets { 
  margin-top: 0px; margin-right: 10px; float: left; width: 260px; padding: 0 0 20px 0;
}

#facets .no-filters {
  padding: 20px 0;
  padding-top: 9px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-weight: lighter;
  font-style: italic;
}

#facets a { border: none; }
#facets .list { overflow: auto; }
#facets .facet h3 {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-weight: lighter;
  font-style: italic;
  font-size: 16px;
  padding: 1px; padding-top: 9px; margin-bottom: 13px; margin-left: 0px; padding-left: 0px; font-weight: normal; margin-top: 1px; 
}

#facets .facet { }
#facets .facet ul { margin: 0px; padding: 0px; }
#facets .facet.selected ul { display: block; }
#facets .facet li { list-style: none; margin: 0; padding-left: 0px; padding-top: 5px; overflow: auto; color: #888; }

#facets .facet li a {
  position: relative;
  overflow: auto;
  display: block; 
  color: #888; 
  font-size: 13px; 
  white-space: nowrap;
  padding-left: 30px;
}

#facets .facet li a:hover { text-decoration: none; color: #000; }
#facets .facet li a:hover .tick-icon { border-color: #000; }
#facets .facet li a span.item-count { 
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-style: italic;
  font-weight: bold;
  color: #bbb; margin-left: 5px; padding: 0 5px; font-size: 18px; float: right; /* background: #777; */
}

#facets .facet li.selected a span.item-count, #facets .facet li:hover a span.item-count { color: black; }

#facets .facet li a div.tick-icon { 
  position: absolute;
  left: 0px;
  top: 2px;
  border: 1px solid #ccc;
  padding: 2px;
  width: 14px;
  height: 14px;
}

#facets .facet .facet-choices { overflow: auto; }
#facets .facet li.facet-choice { color: #888; }
#facets .facet li.facet-choice.selected a { color: black; }

#facets .facet li.facet-choice.selected a div.tick-icon {
  border-color: #000;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAGZJREFUeNpi/P//PwMpgImBRECyBgYinCQAxAFwtQQ0GADxe5BakCZ0DSCTEpAUJyApBtEGyBpAis9DJUEKG6BsuGJ0JxUgKfiPTTE2P8zHpxiXp+fjUowvlPqxKYZpYCQ1aQAEGACY7lEYFmjlwgAAAABJRU5ErkJggg==);
}


/* body > #container > #document_wrapper
-------------------------------------------------------------------------------*/

#document_wrapper { 
/*  -webkit-border-radius:4px;
  -moz-border-radius:   4px;
  border-radius:        4px;*/
  
/*  -webkit-box-shadow: 0px 1px 4px rgba(0,0,0,0.35), inset 0px 0px 1px rgba(255,255,255,0.15);
  -moz-box-shadow:    0px 1px 4px rgba(0,0,0,0.35), inset 0px 0px 1px rgba(255,255,255,0.15);
  box-shadow:         0px 1px 4px rgba(0,0,0,0.35), inset 0px 0px 1px rgba(255,255,255,0.15);
*/  
  background: #fff;
  position: relative;
  margin: 0 180px 20px 100px;
}

.content-wrapper {
  top: 130px;
  bottom: 20px;
  left: 100px;
  right: 180px;
  position: fixed; 
}

/* body > #container > .view-actions
-------------------------------------------------------------------------------*/

.view-actions {
  position: absolute;
  left: -60px;
  top: 0px;
  width: 60px;
  height: 200px;
}

.view-actions.docked {
  position: fixed;
  top: 0px;
  left: 40px;
}

.view-actions a {
  border: none;
}

.view-action-icon {
  display: block;
  width: 50px;
  height: 50px;
  margin-bottom: 3px;
  background: #333;
  opacity: 0.3;
}

.view-action-icon:hover {
  opacity: 1;
}
/* ... */

